--- a/Selenium/Selenium.csproj
+++ b/Selenium/Selenium.csproj
@@ -23,4 +23,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Selenium Basics\" />
+  </ItemGroup>
+
 </Project>
